# coarse

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.Codex/commands/: architecture-review.md  module-review.md
.claude/: settings.json
.claude/commands/: architecture-review.md  dev-loop.md  module-review.md  pre-pr.md  security-review.md  worktree-start.md
.claude/hooks/: session-brief.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cleanup_papers.yml  cleanup_review_secrets.yml  keepalive.yml  modal-deploy.yml  modal-preview-deploy.yml  monitor.yml  release.yml  retention.yml  security.yml  supabase-migrate-preview.yml  sweep_stale_reviews.yml
data/: phase2_eval_results.json  phase3_eval_results.json  quality_literature_review_gemini3.1pro.md  quality_r3d_qwen3.5plus_gemini3.1pro.md  quality_targeting_kimik2.5_gemini3.1pro.md
data/other_examples/slutsky/: coarse_f771f220-3536-4a3b-b428-c83be6d76c6b_anthropic_claude_sonnet_4_6.md  quality_coarse_vs_raw_gemini31pro.md  quality_raw_vs_coarse_gemini31pro.md  sonnet_plain_review.md
data/refine_examples/: feedback-coset-codes-part-i-introduction-and-geometrical-cl-2026-03-04.md
data/refine_examples/cortical_circuits/: coarse_review.md  coarse_review_phase2.md  coarse_review_phase3.md  paper.extraction_cache.json  paper_quality_20260306_223336.md  paper_quality_20260306_232945.md  paper_quality_20260307_003655.md  paper_quality_kimik25_20260308_135543.md  paper_quality_mimov2flash_20260308_135616.md  (+54 more)
deploy/: CAPACITY.md  DEPLOY.md  DEPLOY_MCP.md  PREVIEW_ENVIRONMENTS.md  bootstrap_schema_migrations.sql  mcp_server.py  mcp_test_client.py  migrate_active_review_capacity.sql  migrate_drop_mcp_handoff_tokens.sql  migrate_email_phase1.sql  migrate_email_phase2.sql  migrate_mcp_handoff.sql  migrate_rate_limit.sql  migrate_rename_handoff_tokens.sql  migrate_restore_mcp_handoff_tokens.sql  migrate_review_access_security.sql  migrate_review_secrets.sql  migrate_reviews_select_policy.sql  modal_worker.py  supabase_schema.sql
docs/: DEV_BACKLOG.md  mcp-install.md
output/codex54high_dev_b30440d_2026-04-13/: README.md  partial_summary_cortical_coset.json  partial_summary_popgen_targeting.json  summary_all_refs.json
scripts/: apply_migrations.sh  batch_review.py  dev_runner.py  doc-sync-check.sh  eval_existing.py  export_pipeline_spec.py  kill-switch.sh  kill_switch.py  ocr_reviewer3.py  probe_data_collection.py  release_audit.py  run_eval.py  run_quality_eval.py  run_remote_mcp_dev.py  security_scanner.py  test_lit_search.py
src/coarse/: __init__.py  __main__.py  claude_code_client.py  cli.py  cli_attach.py  cli_review.py  coding_agent.py  config.py  cost.py  extraction.py  extraction_cache.py  extraction_formats.py  extraction_openrouter.py  extraction_qa.py  garble.py  headless_clients.py  headless_review.py  llm.py  models.py  pipeline.py  pipeline_spec.py  progress.py  prompts.py  quality.py  quote_verify.py  recall.py  review_stages.py  review_utils.py  routing.py  structure.py  synthesis.py  types.py
tests/: conftest.py  test_agent-base.py  test_architecture_drift.py  test_claude_code_client.py  test_cli.py  test_cli_attach.py  test_cli_review.py  test_coding_agent.py  test_coding_critique.py  test_coding_section.py  test_compare_page_data.py  test_completeness-agent.py  test_completeness.py  test_config.py  test_cost-estimator.py  test_cost.py  test_critique-agent.py  test_critique.py  test_cross_section-agent.py  test_crossref-agent.py  test_domain_calibration.py  test_editorial.py  test_extraction-cache.py  test_extraction-formats.py  test_extraction-openrouter.py  test_extraction.py  test_extraction_cache.py  test_extraction_openrouter.py  test_extraction_qa.py  test_extraction_quality_gate.py  test_garble.py  test_handoff_lifetimes.py  test_headless_clients.py  test_headless_instructions.py  test_headless_review.py  test_kill_switch.py  test_literature.py  test_llm.py  test_mcp_server.py  test_modal_worker.py  (+26 more)
web/: .env.local.example  STYLE_GUIDE.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: middleware.ts
(+290 files in other folders)
