[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coarse"
version = "0.1.0"
description = "Free, open-source AI academic paper reviewer. The rough alternative to refine.ink."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "David Van Dijcke" }]
keywords = ["academic", "paper", "review", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "litellm>=1.60",
    "instructor>=1.7",
    "docling>=2.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "tomli-w>=1.0",
    "pymupdf>=1.24",
    "openhands-sdk>=0.1",
    "openhands-tools>=0.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
coarse = "coarse.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coarse"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
